--- a/blog.cabal
+++ b/blog.cabal
@@ -28,6 +28,7 @@ library
   import: base
   exposed-modules:
       Utils
+      Config
   hs-source-dirs:
       src
   build-depends:
@@ -44,4 +45,4 @@ executable site
   import: base
   main-is: site.hs
   build-depends: blog
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
