--- a/blog.cabal
+++ b/blog.cabal
@@ -12,6 +12,7 @@ common base
     FlexibleInstances
     ImportQualifiedPost
     LambdaCase
+    OverloadedRecordDot
     OverloadedStrings
     PatternSynonyms
     ScopedTypeVariables
@@ -51,8 +52,10 @@ executable site
   build-depends:
     , aeson
     , blog
+    , directory
     , bytestring
     , http-types
+    , raw-strings-qq
     , wai
     , wai-app-static
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
