--- a/blog.cabal
+++ b/blog.cabal
@@ -1,7 +1,13 @@
-cabal-version: 2.2
-build-type:    Simple
-version:       0.1.0.0
-name:          blog
+cabal-version:      3.0
+
+author:             Emeka Nkurumeh
+build-type:         Simple
+homepage:           https://emekoi.github.io
+license-file:       LICENSE
+license:            MIT
+maintainer:         emekankurumeh@outlook.com
+name:               blog
+version:            0.1.0.0
 
 common base
   ghc-options: -Wall -Wcompat -Wextra -Widentities -Wno-name-shadowing
@@ -21,12 +27,12 @@ common base
     TypeOperators
     ViewPatterns
   build-depends:
-    , base == 4.*
-    , bytestring
-    , containers
-    , filepath
-    , hakyll == 4.16.*
-    , text
+    , base ^>= 4.18
+    , bytestring ^>= 0.11
+    , containers ^>= 0.6
+    , filepath ^>= 1.4
+    , hakyll ^>= 4.16
+    , text ^>= 2.0
 
 library
   import: base
@@ -40,22 +46,22 @@ library
     , blaze-html ^>= 0.9
     , bytestring ^>= 0.11
     , ghc-syntax-highlighter ^>= 0.0.10
-    , pandoc
-    , pandoc-types
-    , process
-    , text-icu
-    , time
+    , pandoc ^>= 3.1
+    , pandoc-types ^>= 1.23
+    , process ^>= 1.6
+    , text-icu ^>= 0.8
+    , time ^>= 1.12
 
 executable site
   import: base
   main-is: site.hs
   build-depends:
-    , aeson
+    , aeson ^>= 2.2
     , blog
-    , directory
     , bytestring
-    , http-types
-    , raw-strings-qq
-    , wai
-    , wai-app-static
+    , directory ^>= 1.3
+    , http-types ^>= 0.12
+    , raw-strings-qq ^>= 1.1
+    , wai ^>= 3.2
+    , wai-app-static ^>= 3.1
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
