--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,28 +18,27 @@ on:
   push:
     branches: [master]
 
+env:
+  ghc_version: '9.6'
+
 jobs:
   build:
-    name: Build with GHC ${{ matrix.ghc-version }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+    name: Build with GHC ${{ env.ghc_version }}
+    runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: true
-      matrix:
-        os: [ubuntu-latest]
-        ghc-version: ['9.6']
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up GHC ${{ matrix.ghc-version }}
+    - name: Set up GHC ${{ env.ghc_version }}
       uses: haskell-actions/setup@v2
       id: setup
       with:
-        ghc-version: ${{ matrix.ghc-version }}
-        # Defaults, added for clarity:
-        cabal-version: 'latest'
-        cabal-update: true
+        ghc-version: ${{ env.ghc_version }}
 
     - name: Configure build
       run: |
@@ -88,17 +87,6 @@ jobs:
       with:
         path: '_site/'
 
-  deploy:
-    name: Deploy site
-    runs-on: ubuntu-latest
-    needs: build
-
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    steps:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v3
