--- a/blog.cabal
+++ b/blog.cabal
@@ -28,40 +28,32 @@ common base
     TypeOperators
     ViewPatterns
   build-depends:
+    , aeson ^>= 2.2
     , base ^>= 4.18
+    , blaze-html ^>= 0.9
     , bytestring ^>= 0.11
     , containers ^>= 0.6
+    , directory ^>= 1.3
     , filepath ^>= 1.4
-    , hakyll ^>= 4.16
-    , process ^>= 1.6
-    , text ^>= 2.0
-
-library
-  import: base
-  exposed-modules:
-      Config
-      Slug
-      Utils
-      Pandoc
-  hs-source-dirs:
-      site
-  build-depends:
-    , blaze-html ^>= 0.9
     , ghc-syntax-highlighter ^>= 0.0.10
+    , hakyll ^>= 4.16
+    , http-types ^>= 0.12
     , pandoc ^>= 3.1
     , pandoc-types ^>= 1.23
+    , process ^>= 1.6
+    , raw-strings-qq ^>= 1.1
+    , text ^>= 2.0
     , text-icu ^>= 0.8
     , time ^>= 1.12
+    , wai ^>= 3.2
+    , wai-app-static ^>= 3.1
 
 executable site
   import: base
   main-is: site.hs
-  build-depends:
-    , aeson ^>= 2.2
-    , blog
-    , directory ^>= 1.3
-    , http-types ^>= 0.12
-    , raw-strings-qq ^>= 1.1
-    , wai ^>= 3.2
-    , wai-app-static ^>= 3.1
+  other-modules:
+    Site.Config
+    Site.Slug
+    Site.Utils
+    Site.Pandoc
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
