--- a/blog.cabal
+++ b/blog.cabal
@@ -10,7 +10,7 @@ name:               blog
 version:            0.1.0.0
 
 common base
-  ghc-options: -Wall -Wcompat -Wextra -Widentities -Wno-name-shadowing
+  ghc-options: -Wall -Wcompat -Wextra -Widentities -Wno-name-shadowing -fsplit-sections
   default-language: Haskell2010
   default-extensions:
     BangPatterns
