--- a/drafts/pattern-matching/pattern-matching.cabal
+++ b/drafts/pattern-matching/pattern-matching.cabal
@@ -33,9 +33,9 @@ common base
   build-depends:
     , array ^>= 0.5
     , base ^>= 4.18
-    , blaze-html ^>= 0.9
     , bytestring ^>= 0.11
     , containers ^>= 0.6
+    , diagnose ^>= 2
     , microlens ^>= 0.4
     , mtl ^>= 2.3
     , prettyprinter ^>= 1.7
