--- a/drafts/pattern-matching/pattern-matching.cabal
+++ b/drafts/pattern-matching/pattern-matching.cabal
@@ -32,14 +32,14 @@ common base
     ViewPatterns
   build-depends:
     , array ^>= 0.5
-    , base ^>= 4.18
+    , base ^>= 4.19
     , bytestring ^>= 0.11
     , containers ^>= 0.6
-    , diagnose ^>= 2
+    , diagnose
     , microlens ^>= 0.4
     , mtl ^>= 2.3
     , prettyprinter ^>= 1.7
-    , text ^>= 2.0
+    , text ^>= 2.1
     , transformers ^>= 0.6
 
 executable pattern-matching
