--- a/drafts/pattern-matching/pattern-matching.cabal
+++ b/drafts/pattern-matching/pattern-matching.cabal
@@ -37,18 +37,19 @@ common base
     , bytestring ^>= 0.11
     , containers ^>= 0.6
     , diagnose
+    , data-default-class ^>= 0.1
     , microlens ^>= 0.4
     , mtl ^>= 2.3
     , prettyprinter ^>= 1.7
     , text ^>= 2.1
     , transformers ^>= 0.6
+    , witherable ^>= 0.4
 
 executable pattern-matching
   import: base
   build-tool-depends:
     , alex:alex ^>= 3.4
     , happy:happy ^>= 1.20
-    , markdown-unlit:markdown-unlit
   main-is: Main.hs
   other-modules:
     Lexer
