--- a/drafts/pattern-matching/pattern-matching.cabal
+++ b/drafts/pattern-matching/pattern-matching.cabal
@@ -54,8 +54,9 @@ executable pattern-matching
   main-is: Main.hs
   other-modules:
     Core
+    Elab
     Error
     Lexer
     Parser
-    Elab
+    Util
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -pgmL markdown-unlit
