--- a/drafts/pattern-matching/pattern-matching.cabal
+++ b/drafts/pattern-matching/pattern-matching.cabal
@@ -57,6 +57,7 @@ executable pattern-matching
     Elab
     Error
     Lexer
+    NBRElab
     Parser
     Util
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -pgmL markdown-unlit
