--- a/blog.cabal
+++ b/blog.cabal
@@ -36,34 +36,34 @@ executable blog
     ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is Blog
     main-is:     Blog.hs
     other-modules:
+      Blog.MMark
       Blog.Ninja
+      Blog.Slug
     if !flag(ci)
       cpp-options: -DPREVIEW_SERVER
     build-depends:
       , Glob                   ^>= 0.10
       , base                   ^>= 4.19
-      , blaze-html             ^>= 0.9
+      , lucid                  ^>= 2.11
       , bytestring             ^>= 0.11
       , containers             ^>= 0.6
       , data-default           ^>= 0.7
       , directory              ^>= 1.3
       , filepath               ^>= 1.4
       , ghc-syntax-highlighter ^>= 0.0.10
+      , mmark                  ^>= 0.0.7
       , mtl                    ^>= 2.3
+      , megaparsec             ^>= 9.6
       , optparse-applicative   ^>= 0.18
-      , pandoc
-      , pandoc                 ^>= 3.1
-      , pandoc-types           ^>= 1.23
       , prettyprinter          ^>= 1.7
       , process                ^>= 1.6
       , raw-strings-qq         ^>= 1.1
       , store                  ^>= 0.7
+      , stache                 ^>= 2.3
       , text                   ^>= 2.1
       , text-icu               ^>= 0.8
       , time                   ^>= 1.12
-
-      -- , aeson ^>= 2.2
-      -- , hakyll ^>= 4.16
+      , aeson ^>= 2.2
       -- , http-types ^>= 0.12
       -- , wai ^>= 3.2
       -- , wai-app-static ^>= 3.1
