--- a/cabal.project
+++ b/cabal.project
@@ -1,2 +1,5 @@
 packages: ./*.cabal
 optional-packages: vendor/*/*.cabal
+
+-- only time 1.14 makes the generic instances available
+allow-newer: time
