--- a/drafts/pattern-matching/project.cabal
+++ b/drafts/pattern-matching/project.cabal
@@ -35,17 +35,19 @@ common base
     ViewPatterns
 
   build-depends:
+    , aeson              ^>= 2.2
     , base               ^>= 4.19
+    , bytestring         ^>= 0.12
     , containers         ^>= 0.6
+    , megaparsec         ^>= 9.6
     , microlens          ^>= 0.4
     , microlens-ghc      ^>= 0.4
+    , mtl                ^>= 2.3
+    , parser-combinators ^>= 1.3
     , text               ^>= 2.1
     , text-short         ^>= 0.1
     , transformers       ^>= 0.6
     , witherable         ^>= 0.4
-    , megaparsec
-    , parser-combinators
-    , mtl
 
 executable pattern
   import:      base
