improving compilation pipeline stuff

--- a/drafts/pattern-matching/project.cabal
+++ b/drafts/pattern-matching/project.cabal
@@ -15,6 +15,8 @@ common base
     BangPatterns
     BlockArguments
     DataKinds
+    FlexibleContexts
+    FlexibleInstances
     DerivingVia
     DuplicateRecordFields
     GADTs
