--- a/drafts/row-poly/rows.cabal
+++ b/drafts/row-poly/rows.cabal
@@ -32,7 +32,11 @@ common base
 
   build-depends:
     , base               ^>= 4.19
+    , bytestring         ^>= 0.12
     , containers         ^>= 0.6
+    , megaparsec         ^>= 9.6
+    , parser-combinators ^>= 1.3
+    , text               ^>= 2.1
     , transformers       ^>= 0.6
 
 executable rows
@@ -40,4 +44,5 @@ executable rows
   main-is:     Main.hs
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is Main
   other-modules:
+    Parser
     Poly
