move resume generation to ci pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,13 +76,17 @@ jobs:
         path: ${{ steps.setup.outputs.cabal-store }}
         key: ${{ steps.cache.outputs.cache-primary-key }}
 
-    - name: build blog and resume
-      uses: xu-cheng/texlive-action@v2
+    - name: build blog
+      run: |
+        cabal build all
+        cabal exec -- blog build -v Info
+
+    - name: build resume
+      uses: xu-cheng/latex-action@v3
       with:
-        scheme: small
-        run: |
-          cabal build all
-          cabal exec -- blog build -v Info
+        args: -r resume/latexmkrc -outdir=_site/static -auxdir=.shake/
+        root_file: resume/resume.tex
+
 
     - name: setup pages
       uses: actions/configure-pages@v4
