--- a/drafts/row-poly/rows.cabal
+++ b/drafts/row-poly/rows.cabal
@@ -13,20 +13,7 @@ common base
   ghc-options: -Wall -Wcompat -Wextra -Widentities -Wno-name-shadowing -fsplit-sections
   default-language: GHC2021
   default-extensions:
-    BlockArguments
-    DataKinds
-    DeriveFunctor
-    DeriveTraversable
-    DerivingVia
-    DuplicateRecordFields
-    GADTs
-    GeneralizedNewtypeDeriving
-    LambdaCase
     OverloadedStrings
-    PatternSynonyms
-    RecordWildCards
-    TypeFamilies
-    ViewPatterns
 
   build-depends:
     , base               ^>= 4.19
@@ -42,6 +29,8 @@ executable rows
   main-is:     Main.hs
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is Main
   other-modules:
+    Error
     Infer
     Parser
     Syntax
+    Unify
